<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AndroidGroupProject</string>
    <string name="nasa">Go to the Nasa Imagery Database</string>
    <string name="nasaImageofDay">Nasa Image of the day</string>
    <string name="help">Help</string>
    <string name="bbc">BBC News Reader</string>
    <string name="guardian">Guardian News</string>
    <string name="imageryDatabase">Nasa Earth Imagery</string>
    <string name="amanjot">Author: Amanjot Singh</string>
    <string name="activity_image_of_day">Nasa Image of the Day</string>
    <string name="activity_image_of_day_version">Version 1.0.2</string>
    <string name="acalendartext"> Select a date from below:  </string>
    <string name="Go"> Go ! </string>
    <string name="nasaMessage"> Select any date from the calendar to see the NASA Image of the day in HD format </string>
    <string name="notesMessage"> Add notes: </string>
    <string name="savetoDatabase"> Save and View </string>
    <string name="saveOnly"> Save to Database </string>
    <string name="header_url"> URL: </string>
    <string name="header_date"> Date: </string>
    <string name="header_hdurl"> HD URL: </string>
    <string name="list_heading"> Select an item to view details </string>
    <string name="guardianPage">Go to the Guardian News Search</string>
    <string name="search_news_article_about">Search News Article About</string>
    <string name="the_guardian_news">The Guardian News</string>
    <string name="search">Search</string>
    <string name="title">Title: </string>
    <string name="click_this_url_to_open_the_article_in_browser">Click this Url to open the article in browser:</string>
    <string name="url">url: </string>
    <string name="bbc_news_reader">BBC News Reader</string>
    <string name="nasa_image_of_the_day_search">NASA image of the day search</string>
    <string name="author_jashanjot_pruthi">Author : Jashanjot Pruthi</string>
    <string name="lat">Enter the value of the Latitude</string>
    <string name="lo">Enter the value of the Longitude</string>
    <string name="subm">Click here to submit</string>
    <string name="save_article">Save article</string>
    <string name="help_article">Help</string>
    <string name="hideFrag">HIDE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GotoBBCnewsReader">BBC News Reader</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="listTitle">BBC Latest News</string>
    <string name="guardianNewsSearch">Guardian News Search</string>
    <string name="nasaImaginaryDatabase">Nasa Imaginary Database</string>
    <string name="bbcTitle">BBC News Reader (RSS)</string>
    <string name="bbcVersion">v1.0.1</string>
    <string name="bbcAuthor">Author: Priyank Patel</string>
    <string name="saved_article">Saved Articles</string>
    <string name="enterYourName">Enter your Name</string>
    <string name="nasaHelp">Select any date from the date picker and tap go to see the NASA image of the day. Press \'save and view\' to save the image and urls\' for later viewing</string>
    <string name="enter">Enter</string>
    <string name="viewSaved">View Saved Images</string>
    <string name="pleaseEnterYourName" tools:ignore="MissingTranslation">Please Enter Your Name</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="RemoveFromSavedArticles">Remove from Saved Articles?</string>
    <string name="Remove">Remove?</string>
    <string name="saveddd_article">Saved Articles</string>
    <string name="bbc_help">This App will bring the latest news from BBC. You can also save and delete your favorite articles</string>
    <string name="ArticleSaved">Article Saved</string>
    <string name="favourite_articles">Favourite Articles</string>
    <string name="helpAlert">Enter a topic to search articles about\nHit the search button to fetch the articles\n</string>
    <string name="helpAlert2">Long click an article to save it to your favourite article list\n</string>
    <string name="helpAlert3">Click an article to open the deatils of that article</string>
    <string name="nasaHint">Select a Date</string>
    <string name="notesHint">Click here to add notes...</string>
    <string name="nasaImageDescription">Regular Image Url</string>
    <string name="nasaHide">Back</string>
    <string name="athr">author-Shubham Sharma</string>
    <string name="email">Email - shar0514@algonquinlive.com</string>
    <string name="yo">You have to fill the right longitude and latitude and you fill get the image according to the coordinated that you type</string>
    <string name="sa">Save to the database</string>
    <string name="qq">No value should be empty</string>
    <string name ="b">Latitude </string>
    <string name ="c">Longitude </string>
    <string name ="zx"> Go to the Favourites</string>
    <string name ="qwe">Save</string>
    <string name ="r">You clicked on item #</string>
    <string name ="Do">Do you want to delete it</string>
</resources>
