<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <Button
       android:id="@+id/nasa"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text ="@string/nasa"/>

   <Button
       android:id="@+id/nasaImageofDay"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text ="@string/nasaImageofDay"/>


   <Button
       android:id="@+id/goToBBCnewsReader"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/GotoBBCnewsReader"
       />

    <Button
        android:id="@+id/guardianMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/the_guardian_news"/>
</LinearLayout>