<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/BBCIcon"
        android:src="@drawable/bbcnews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/BBCTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bbcTitle" />


    <TextView
        android:id="@+id/bbcnewsVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bbcVersion" />

    <TextView
        android:id="@+id/bbcAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bbcAuthor" />

</LinearLayout>