<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageryDatabase">

    <EditText
        android:id="@+id/lati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lat"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/loni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lati" />

    <Button
        android:id="@+id/subm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/subm"
        android:layout_centerInParent="true" />

</RelativeLayout>