<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BBC_Saved_Articles_List"
    android:orientation="vertical"
    android:background="@drawable/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/enterYourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterYourName"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"/>
    </LinearLayout>
    <TextView
        android:id="@+id/savedArticlesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_article"
        android:textSize="45dp"
        android:textStyle="italic|bold"
        android:gravity="center"/>

    <ListView
        android:id="@+id/savedArticles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>