<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="40dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/header_date"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/header_url"/>

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/header_hdurl"/>


    <TextView
        android:id="@+id/hdurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="25dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveAndGoToDatabase"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/savetoDatabase"/>

   <!-- <Button
        android:id="@+id/saveToDatabase"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/saveOnly"/>-->

</LinearLayout>